--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>University Landing Page</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy6pCyL7L3R2mgUp8UlfewOqJFEN6I5XWl"
+        crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .jumbotron {
+            background-color: #007bff;
+            color: white;
+            text-align: center;
+            padding: 100px 25px;
+        }
+
+        .university-logo {
+            max-width: 150px;
+        }
+
+        .main-content {
+            margin-top: 50px;
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+        <img src="university-logo.png" alt="University Logo" class="university-logo">
+        <h1 class="display-4">Welcome to XYZ University</h1>
+        <p class="lead">A Place of Knowledge and Excellence</p>
+    </div>
+
+    <!-- Main Content -->
+    <div class="container main-content">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.</p>
+            </div>
+            <div class="col-md-6">
+                <h2>Programs</h2>
+                <ul>
+                    <li>Undergraduate Programs</li>
+                    <li>Graduate Programs</li>
+                    <li>Research Programs</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Campus Life</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.</p>
+            </div>
+            <div class="col-md-6">
+                <h2>Admissions</h2>
+                <p>Apply now for the upcoming semester! Join us in our journey of academic excellence.</p>
+                <a href="#" class="btn btn-primary">Apply Now</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy6pCyL7L3R2mgUp8UlfewOqJFEN6I5XWl"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html>
