--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>University Landing Page</title>
+    <title>Politeknik PGRI Banten</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy6pCyL7L3R2mgUp8UlfewOqJFEN6I5XWl"
@@ -36,9 +36,8 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron">
-        <img src="university-logo.png" alt="University Logo" class="university-logo">
-        <h1 class="display-4">Welcome to XYZ University</h1>
-        <p class="lead">A Place of Knowledge and Excellence</p>
+        <h1 class="display-4">Selamat Datang di Web Politeknik PGRI Banten</h1>
+        <p class="lead">Sekilas Tentang Kami</p>
     </div>
 
     <!-- Main Content -->
