--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="col-md-6">
         <h2 class="cv-heading">Kontak</h2>
-        <p class="cv-content">Email:ysari0519@gmail.com<br> Phone:0819-2888-5230</p>
+        <p class="cv-content">Email:cuaksss@gmail.com<br> Phone:08123456789</p>
       </div>
     </div>
   </div>
