--- a/index.html
+++ b/index.html
@@ -78,10 +78,18 @@
     <div class="row">
       <div class="col-md-6 mx-auto text-center">
         <img src="foto cv yuni.jpg" alt="Foto Profil" class="profile-picture mb-3">
-        <h2 class="text-brown">Nama Lengkap</h2>
-        <p class="text-muted"><i class="fas fa-envelope"></i> email@example.com | <i class="fas fa-phone"></i> (123) 456-7890</p>
+        <h2 class="text-brown">Yunita Sari</h2>
+        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678</p>
 
         <hr>
+
+        <h3 class="mb-4 text-brown">Tentang Saya</h3>
+        <p class="text-brown">
+          Saya adalah seorang mahasiswi yang berdedikasi dan berorientasi pada hasil dengan latar belakang pendidikan di bidang keuangan. Saya memiliki keterampilan analitis yang kuat dan kemampuan untuk bekerja secara efektif dalam tim. Saya bersemangat untuk mengembangkan pengetahuan dan keterampilan keuangan saya, serta memanfaatkannya dalam lingkungan profesional.
+        </p>
+
+        <hr>
+        
 
         <h3 class="mb-4 text-brown">Riwayat Pendidikan</h3>
         <ul class="list-group">
