--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
         
         <h3 class="mb-4 text-brown">Riwayat Pendidikan</h3>
         <ul class="list-group">
-          <li class="list-group-item">S1 Teknik Informatika - Universitas ABC (2010-2014)</li>
-          <li class="list-group-item">SMA Negeri 1 Kota XYZ (2007-2010)</li>
+          <li class="list-group-item">Akuntansi dan Keuangan Lembaga - SMKN 3 Kota Cilegon (2019-2021)</li>
+          <li class="list-group-item">Bisnis Digital - Politeknik PGRI Banten (2022-Now)</li>
         </ul>
 
         <h3 class="mt-4 mb-4 text-brown">Pengalaman Kerja</h3>
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title">Web Developer</h5>
+            <h5 class="card-title">Finance Accounting</h5>
             <p class="card-text">
-              Perusahaan ABC, Jakarta (2015-2018)<br>
+             PT. Surya Permata Makmur, Cilegon (May 2022-May 2023)<br>
               Bertanggung jawab untuk pengembangan dan pemeliharaan situs web perusahaan.
             </p>
           </div>
