--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <div class="col-md-6 mx-auto text-center">
         <img src="foto cv yuni.jpg" alt="Foto Profil" class="profile-picture mb-3">
         <h2 class="text-brown">Yunita Sari</h2>
-        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678</p>
+        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678</p> | <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/yunaeyz_" target="_blank">Instagram</a>
+        </p>
         
       <hr>
 
@@ -117,12 +118,6 @@
             </p>
           </div>
         </div>
-
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 class="card-title">Mobile App Developer</h5>
-            <p class="card-text">
-              Startup KLMN, Bandung (2010-2013)<br>
               
     <h3 class="mb-4 text-brown">Soft Skill</h3>
     <ul class="text-brown">
