--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
       <div class="col-md-6 mx-auto text-center">
         <img src="foto cv yuni.jpg" alt="Foto Profil" class="profile-picture mb-3">
         <h2 class="text-brown">Yunita Sari</h2>
-        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678</p> | <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/yunaeyz_" target="_blank">Instagram</a>
-        </p>
-        
+        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678 | <i class="fab fa-instagram text-black"></i> <a href="https://www.instagram.com/yunaeyz_" class="text-black" target="_blank">Instagram</a>
+</p>
       <hr>
 
         <h3 class="mb-4 text-brown">Tentang Saya</h3>
