--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
         <h3 class="mb-4 text-brown">Riwayat Pendidikan</h3>
         <ul class="list-group">
-          <li class="list-group-item">Akuntansi dan Keuangan Lembaga - SMKN 3 Kota Cilegon (2019-2021)</li>
+          <li class="list-group-item">Akuntansi Keuangan Lembaga - SMKN 3 Kota Cilegon (2019-2021)</li>
           <li class="list-group-item">Bisnis Digital - Politeknik PGRI Banten (2022-Now)</li>
         </ul>
 
