--- a/index.html
+++ b/index.html
@@ -102,18 +102,17 @@
             <h5 class="card-title">Finance Accounting</h5>
             <p class="card-text">
              PT. Surya Permata Makmur, Cilegon (May 2022-May 2023)<br>
-              Bertanggung jawab untuk pengembangan dan pemeliharaan situs web perusahaan.
+              Bertanggung jawab untuk mencatat laporan keuangan dan mengelola jumlah stock barang.
             </p>
           </div>
         </div>
 
-        <!-- Tambahkan 2 pengalaman kerja lainnya sesuai kebutuhan -->
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title">Front-end Developer</h5>
+            <h5 class="card-title">Admin</h5>
             <p class="card-text">
-              Perusahaan XYZ, Surabaya (2013-2015)<br>
-              Mengembangkan antarmuka pengguna yang responsif dan menarik.
+              PT. Rahayu Adhyastha Motor, Cilegon (2023)<br>
+             Bertanggung jawab untuk manajemen administratif terkait kendaraan, termasuk pencatatan data pelanggan, penjadwalan perbaikan, manajemen keuangan, dan menjaga hubungan pelanggan.
             </p>
           </div>
         </div>
@@ -130,10 +129,11 @@
     <h3 class="mb-4 text-brown">Hard Skill</h3>
     <ul class="text-brown">
       <li>HTML, CSS, JavaScript</li>
-      <li>React.js, Vue.js</li>
-      <li>Node.js, Express.js</li>
-      <li>Git, GitHub</li>
-      <li>UI/UX Design</li>
+      <li>Design Canva, Corel Draw, PhotoShop</li>
+      <li>Microsoft Word</li>
+      <li>Microsoft Excel</li>
+      <li>Microsoft Acces</li>
+      <li>Microsoft Power Point</li>
     </ul>
 
     <h3 class="mb-4 text-brown">Portfolio Proyek</h3>
