--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h5 class="card-title">Admin</h5>
             <p class="card-text">
               PT. Rahayu Adhyastha Motor, Cilegon (2023)<br>
-             Bertanggung jawab untuk manajemen administratif terkait kendaraan, termasuk pencatatan data pelanggan, penjadwalan perbaikan, manajemen keuangan, dan menjaga hubungan pelanggan.
+             Bertanggung jawab untuk memanajemen administratif terkait kendaraan, termasuk pencatatan data pelanggan, penjadwalan perbaikan, manajemen keuangan, dan menjaga hubungan pelanggan.
             </p>
           </div>
         </div>
@@ -141,7 +141,7 @@
       <div class="card-body">
         <h5 class="card-title">Proyek XYZ</h5>
         <p class="card-text">Deskripsi proyek XYZ.</p>
-        <a href="https://www.youtube.com/watch?v=videoid" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
+        <a href="https://youtu.be/mXndGtRhEgk?si=dEAvsp6IqlmGSi-H" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
       </div>
     </div>
 
