--- a/index.html
+++ b/index.html
@@ -117,24 +117,28 @@
           </div>
         </div>
               
-    <h3 class="mb-4 text-brown">Soft Skill</h3>
-    <ul class="text-brown">
-      <li>Pemecahan Masalah</li>
-      <li>Komunikasi Efektif</li>
-      <li>Kerjasama Tim</li>
-      <li>Kreativitas</li>
-      <li>Pengaturan Waktu</li>
-    </ul>
+  <div class="mb-4 text-brown">
+    <h3 class="mb-3">Soft Skill</h3>
+    <div class="box">
+      <p>Pemecahan Masalah</p>
+      <p>Komunikasi Efektif</p>
+      <p>Kerjasama Tim</p>
+      <p>Kreativitas</p>
+      <p>Pengaturan Waktu</p>
+    </div>
+  </div>
 
-    <h3 class="mb-4 text-brown">Hard Skill</h3>
-    <ul class="text-brown">
-      <li>HTML, CSS, JavaScript</li>
-      <li>Design Canva, Corel Draw, PhotoShop</li>
-      <li>Microsoft Word</li>
-      <li>Microsoft Excel</li>
-      <li>Microsoft Acces</li>
-      <li>Microsoft Power Point</li>
-    </ul>
+  <div class="mb-4 text-brown">
+    <h3 class="mb-3">Hard Skill</h3>
+    <div class="box">
+      <p>HTML, CSS, JavaScript</p>
+      <p>Design Canva, Corel Draw, PhotoShop</p>
+      <p>Microsoft Word</p>
+      <p>Microsoft Excel</p>
+      <p>Microsoft Acces</p>
+      <p>Microsoft Power Point</p>
+    </div>
+  </div>
 
     <h3 class="mb-4 text-brown">Portfolio Proyek</h3>
     <div class="card">
