--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
           </div>
         </div>
               
-  <div class="mb-4 text-brown">
-    <h3 class="mb-3">Soft Skill</h3>
-    <div class="box">
+ <div class="mb-4 text-brown">
+  <h3 class="mb-3">Soft Skill</h3>
+  <div class="card">
+    <div class="card-body">
       <p>Pemecahan Masalah</p>
       <p>Komunikasi Efektif</p>
       <p>Kerjasama Tim</p>
@@ -127,18 +128,20 @@
       <p>Pengaturan Waktu</p>
     </div>
   </div>
+</div>
 
-  <div class="mb-4 text-brown">
-    <h3 class="mb-3">Hard Skill</h3>
-    <div class="box">
+<div class="mb-4 text-brown">
+  <h3 class="mb-3">Hard Skill</h3>
+  <div class="card">
+    <div class="card-body">
       <p>HTML, CSS, JavaScript</p>
-      <p>Design Canva, Corel Draw, PhotoShop</p>
-      <p>Microsoft Word</p>
-      <p>Microsoft Excel</p>
-      <p>Microsoft Acces</p>
-      <p>Microsoft Power Point</p>
+      <p>React.js, Vue.js</p>
+      <p>Node.js, Express.js</p>
+      <p>Git, GitHub</p>
+      <p>UI/UX Design</p>
     </div>
   </div>
+</div>
 
     <h3 class="mb-4 text-brown">Portfolio Proyek</h3>
     <div class="card">
