--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           </div>
         </div>
               
-<div class="mb-5 text-brown">
+<div class="mb-4 text-brown">
   <h3 class="mb-3">Soft Skill</h3>
-  <div class="card mb-4">
+  <div class="card">
     <div class="card-body">
       <p>Pemecahan Masalah</p>
       <p>Komunikasi Efektif</p>
@@ -130,9 +130,9 @@
   </div>
 </div>
 
-<div class="mb-5 text-brown">
+<div class="mb-4 text-brown">
   <h3 class="mb-3">Hard Skill</h3>
-  <div class="card mb-4">
+  <div class="card">
     <div class="card-body">
       <p>HTML, CSS, JavaScript</p>
       <p>React.js, Vue.js</p>
@@ -142,6 +142,7 @@
     </div>
   </div>
 </div>
+
 
 
     <h3 class="mb-4 text-brown">Portfolio Proyek</h3>
