--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     body {
       background-color: #f5f5f5;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin-top: 20px; 
+      margin-bottom: 20px;
     }
 
     .profile-picture {
