--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     body {
       background-color: #f5f5f5;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin-top: 30px; 
-      margin-bottom: 30px;
     }
 
     .profile-picture {
@@ -21,8 +19,19 @@
       object-fit: cover;
       border: 5px solid #fff;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px; /* Tambahkan jarak antara foto dan halaman paling atas */
     }
 
+    .bg-beige {
+      background-color: beige;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px; /* Tambahkan jarak antara projek dan halaman paling bawah */
+    }
+
+    .text-brown {
+      color: #8B4513;
+    }
     hr {
       border-top: 2px solid #c0c0c0;
     }
