--- a/index.html
+++ b/index.html
@@ -146,26 +146,46 @@
   <div class="card">
     <div class="card-body">
       <p>HTML, CSS, JavaScript</p>
-      <p>React.js, Vue.js</p>
-      <p>Node.js, Express.js</p>
-      <p>Git, GitHub</p>
-      <p>UI/UX Design</p>
+      <p>Design Canva, Corel Draw</p>
+      <p>Microsoft Word</p>
+      <p>Microsoft Excel</p>
+      <p>Microsoft Acces</p>
     </div>
   </div>
 </div>
 
+<h3 class="mb-4 text-brown">Portfolio Proyek</h3>
+        <div class="portfolio-gallery">
+          <!-- Gambar Portofolio -->
+          <div class="portfolio-image">
+            <img src="portfolio_image1.jpg" alt="Portofolio 1">
+          </div>
+          <div class="portfolio-image">
+            <img src="portfolio_image2.jpg" alt="Portofolio 2">
+          </div>
+          <div class="portfolio-image">
+            <img src="portfolio_image3.jpg" alt="Portofolio 3">
+          </div>
+        </div>
 
+        <!-- Tambahkan proyek lainnya sesuai kebutuhan -->
 
-    <h3 class="mb-4 text-brown">Portfolio Proyek</h3>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Proyek XYZ</h5>
-        <p class="card-text">Deskripsi proyek XYZ.</p>
-        <a href="https://youtu.be/mXndGtRhEgk?si=dEAvsp6IqlmGSi-H" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
+        <!-- Tautan Video YouTube -->
+        <h3 class="mt-4 mb-4 text-brown">Proyek Video</h3>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Proyek XYZ</h5>
+            <p class="card-text">Deskripsi proyek XYZ.</p>
+            <a href="https://www.youtube.com/watch?v=videoid" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
+          </div>
+        </div>
+
       </div>
     </div>
-
-    <!-- Tambahkan proyek lainnya sesuai kebutuhan -->
-
   </div>
-</div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
+</html>
