--- a/index.html
+++ b/index.html
@@ -154,46 +154,32 @@
   </div>
 </div>
 
-<h3 class="mb-3 text-brown project-title">Proyek Foto 1</h3>
-        <div class="card">
-          <img src="foto1.jpg" class="card-img-top" alt="Foto 1">
-          <div class="card-body">
-            <h5 class="card-title">Judul Foto 1</h5>
+<h3 class="mb-4 text-brown">Portfolio Proyek</h3>
+        <div class="portfolio-gallery">
+          <!-- Gambar Portofolio -->
+          <div class="portfolio-image">
+            <img src="portfolio_image1.jpg" alt="Portofolio 1">
+          </div>
+          <div class="portfolio-image">
+            <img src="portfolio_image2.jpg" alt="Portofolio 2">
+          </div>
+          <div class="portfolio-image">
+            <img src="portfolio_image3.jpg" alt="Portofolio 3">
           </div>
         </div>
-      </div>
 
-      <div class="col-md-6 mx-auto text-center mb-4">
-        <h3 class="mb-3 text-brown project-title">Proyek Foto 2</h3>
-        <div class="card">
-          <img src="foto2.jpg" class="card-img-top" alt="Foto 2">
-          <div class="card-body">
-            <h5 class="card-title">Judul Foto 2</h5>
-          </div>
-        </div>
-      </div>
+        <!-- Tambahkan proyek lainnya sesuai kebutuhan -->
 
-      <div class="col-md-6 mx-auto text-center mb-4">
-        <h3 class="mb-3 text-brown project-title">Proyek Foto 3</h3>
+        <!-- Tautan Video YouTube -->
+        <h3 class="mt-4 mb-4 text-brown">Proyek Video</h3>
         <div class="card">
-          <img src="foto3.jpg" class="card-img-top" alt="Foto 3">
           <div class="card-body">
-            <h5 class="card-title">Judul Foto 3</h5>
+            <h5 class="card-title">Proyek XYZ</h5>
+            <p class="card-text">Deskripsi proyek XYZ.</p>
+            <a href="https://www.youtube.com/watch?v=videoid" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
           </div>
         </div>
-      </div>
 
-      <div class="col-md-6 mx-auto text-center mb-4">
-        <h3 class="mb-3 text-brown project-title">Proyek Video</h3>
-        <div class="card mb-4">
-          <div class="card-body">
-            <h5 class="card-title">Web Development</h5>
-            <p class="card-text">
-              Deskripsi proyek video.
-            </p>
-            <a href="https://www.youtube.com/watch?v=videoid" class="btn btn-primary" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
