--- a/index.html
+++ b/index.html
@@ -154,17 +154,17 @@
   </div>
 </div>
 
-<h3 class="mb-4 text-brown">Portfolio Proyek</h3>
+<h3 class="mb-4 text-brown">Project Logo</h3>
         <div class="portfolio-gallery">
           <!-- Gambar Portofolio -->
           <div class="portfolio-image">
-            <img src="portfolio_image1.jpg" alt="Portofolio 1">
+            <img src="Caffe.jpg" alt="Portofolio 1">
           </div>
           <div class="portfolio-image">
-            <img src="portfolio_image2.jpg" alt="Portofolio 2">
+            <img src="Resto.jpg" alt="Portofolio 2">
           </div>
           <div class="portfolio-image">
-            <img src="portfolio_image3.jpg" alt="Portofolio 3">
+            <img src="Bar.jpg" alt="Portofolio 3">
           </div>
         </div>
 
