--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
     .text-brown {
       color: #8B4513;
     }
+        .project-title {
+      font-size: 20px;
+      color: #8B4513;
+    }
+
+    .text-brown {
+      color: #8B4513;
+    }
+
+    .portfolio-gallery {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .portfolio-image {
+      width: 30%; /* Atur lebar gambar sesuai kebutuhan */
+    }
+
+    .portfolio-image img {
+      width: 100%;
+      border-radius: 5px;
+      margin-bottom: 10px; /* Tambahkan jarak di bawah setiap gambar */
+    }
     hr {
       border-top: 2px solid #c0c0c0;
     }
@@ -90,7 +113,7 @@
       <div class="col-md-6 mx-auto text-center">
         <img src="foto cv yuni.jpg" alt="Foto Profil" class="profile-picture mb-3">
         <h2 class="text-brown">Yunita Sari</h2>
-        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678 | <i class="fab fa-instagram text-brown"></i> <a href="https://www.instagram.com/yunaeyz_" class="text-black" target="_blank">Instagram</a>
+        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678 | <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/yunaeyz_" class="text-black" target="_blank">Instagram</a>
         </p>
       <hr>
 
