--- a/index.html
+++ b/index.html
@@ -190,12 +190,15 @@
         <div class="portfolio-gallery">
           <!-- Gambar Portofolio -->
           <div class="portfolio-image">
+            <h5 class="portfolio-title">Logo Caffe</h5>
             <img src="Caffe.jpg" alt="Portofolio 1">
           </div>
           <div class="portfolio-image">
+            <h5 class="portfolio-title">Logo Restaurant</h5>
             <img src="Resto.jpg" alt="Portofolio 2">
           </div>
           <div class="portfolio-image">
+            <h5 class="portfolio-title">Logo Bar</h5>
             <img src="Bar.jpg" alt="Portofolio 3">
           </div>
         </div>
