--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
       margin-bottom: 10px; /* Tambahkan jarak di bawah setiap gambar */
     }
     
+     .portfolio-title {
+      font-size: 14px; /* Ubah ukuran font menjadi lebih kecil */
+      text-align: center;
+      color: #8B4513; /* Ubah warna font menjadi coklat */
+    }
+    
     hr {
       border-top: 2px solid #c0c0c0;
     }
