--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <div class="card-body">
             <h5 class="card-title">Proyek XYZ</h5>
             <p class="card-text">Deskripsi proyek XYZ.</p>
-            <a href="https://www.youtube.com/watch?v=videoid" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
+            <a href="https://youtu.be/ErphvB-UXiQ?si=M8NlU80BmVRkkVV0" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
           </div>
         </div>
 
