--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
         <!-- Tambahkan proyek lainnya sesuai kebutuhan -->
 
         <!-- Tautan Video YouTube -->
-        <h3 class="mt-4 mb-4 text-brown">Proyek Video</h3>
+        <h3 class="mt-4 mb-4 text-brown">Project Video</h3>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Proyek XYZ</h5>
-            <p class="card-text">Deskripsi proyek XYZ.</p>
+            <h5 class="card-title">Desain Grafis</h5>
+            <p class="card-text">Desain Sederhana Menggunakan Corel Draw</p>
             <a href="https://youtu.be/ErphvB-UXiQ?si=M8NlU80BmVRkkVV0" class="btn btn-brown" target="_blank"><i class="fab fa-youtube"></i> Tonton Video</a>
           </div>
         </div>
