--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
       text-align: center;
       color: #8B4513; /* Ubah warna font menjadi coklat */
     }
+
+    .social-links {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 10px; /* Tambahkan jarak di atas tautan sosial */
+    }
+
+    .social-link {
+      margin: 0 10px; /* Tambahkan jarak antar tautan sosial */
+      color: #8B4513 !important; /* Ubah warna teks tautan menjadi coklat, !important untuk mengatasi CSS default */
+      text-decoration: none; /* Hilangkan dekorasi tautan */
+    }
     
     hr {
       border-top: 2px solid #c0c0c0;
