--- a/index.html
+++ b/index.html
@@ -69,19 +69,6 @@
       text-align: center;
       color: #8B4513; /* Ubah warna font menjadi coklat */
     }
-
-    .social-links {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 10px; /* Tambahkan jarak di atas tautan sosial */
-    }
-
-    .social-link {
-      margin: 0 10px; /* Tambahkan jarak antar tautan sosial */
-      color: #8B4513 !important; /* Ubah warna teks tautan menjadi coklat, !important untuk mengatasi CSS default */
-      text-decoration: none; /* Hilangkan dekorasi tautan */
-    }
     
     hr {
       border-top: 2px solid #c0c0c0;
@@ -141,7 +128,7 @@
       <div class="col-md-6 mx-auto text-center">
         <img src="foto cv yuni.jpg" alt="Foto Profil" class="profile-picture mb-3">
         <h2 class="text-brown">Yunita Sari</h2>
-        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678 | <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/yunaeyz_" class="text-black" target="_blank">Instagram text-black</a>
+        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678 | <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/yunaeyz_ text-black" class="text-black" target="_blank">yunaey_</a>
         </p>
       <hr>
 
