--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
       text-align: center;
       color: #8B4513; /* Ubah warna font menjadi coklat */
     }
+
+    .social-link {
+      margin: 0 10px;
+      color: #8B4513 !important;
+      text-decoration: none;
+    }
+
+    .social-link:hover {
+      text-decoration: underline;
+    }
     
     hr {
       border-top: 2px solid #c0c0c0;
@@ -128,7 +138,7 @@
       <div class="col-md-6 mx-auto text-center">
         <img src="foto cv yuni.jpg" alt="Foto Profil" class="profile-picture mb-3">
         <h2 class="text-brown">Yunita Sari</h2>
-        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678 | <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/yunaeyz_ text-black" class="text-black" target="_blank">yunaey_</a>
+        <p class="text-muted"><i class="fas fa-envelope"></i> yunitasari@gmail.com | <i class="fas fa-phone"></i> 0819-1234-5678 | <i class="fab fa-instagram"></i> <a href="https://www.instagram.com/Instagram" class="text-black" target="_blank">yunaeyz_</a>
         </p>
       <hr>
 
