--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     .social-link {
       margin: 0 10px;
-      color: #8B4513 !important;
+      color: Black;
       text-decoration: none;
     }
 
