--- a/index.html
+++ b/index.html
@@ -70,14 +70,8 @@
       color: #8B4513; /* Ubah warna font menjadi coklat */
     }
 
-    .social-link {
-      margin: 0 10px;
-      color: Black;
-      text-decoration: none;
-    }
-
-    .social-link:hover {
-      text-decoration: underline;
+    .contact-info {
+      font-size: 14px; /* Ubah ukuran font untuk informasi kontak */
     }
     
     hr {
